logoalignment fix in tiles

--- a/src/Catalogs/Catalogs.css
+++ b/src/Catalogs/Catalogs.css
@@ -158,7 +158,7 @@
     justify-content: center !important;
     margin-bottom: 15px;
     margin-left: 0px;
-    width: 80%;
+    width: 100%;
   }
 
   .brand-logo1 {
